--- a/todo/register-llm-node/1.init.md
+++ b/todo/register-llm-node/1.init.md
@@ -18,7 +18,7 @@ RegisterLlmNode： `packages\components\register-llm-node\src`
 | --- | --- | --- |
 | modelId | string | 基础模型ID |
 | output | Field[] | 输出 |
-| input | InputField[] | 温度 |
+| input | InputField[] | 输入 |
 | prompt | string | 提示词 |
 
 ```ts
