feat: init  RegisterEndNode

--- a/todo/register-end-node/1.init.md
+++ b/todo/register-end-node/1.init.md
@@ -1,14 +1,20 @@
 ## End 节点
 
+## 预设
+
+For Cline:  Plan 和 Act 请使用中文
+
 ## 参考
 
-可以参考 RegisterStartNode 组件的实现方式，实现 RegisterEndNode
+可以参考 RegisterStartNode 和 RegisterLlmNode 组件的实现方式，实现 RegisterEndNode
 
 ## Path
 
-RegisterStartNode: `packages\components\register-start-node\src`
+RegisterStartNode DIR: `packages\components\register-start-node\src`
 
-RegisterLlmNode： `packages\components\register-end-node\src`
+RegisterLlmNode DIR： `packages\components\register-llm-node\src`
+
+RegisterEndNode DIR: `packages\components\register-end-node\src`
 
 ## 技术设计
 
