--- a/todo/编码约定.md
+++ b/todo/编码约定.md
@@ -1,7 +1,6 @@
 # 编码约定
 
-## index.ts
-
+## index.t
 `packages\components\**\index.ts` 是组件的导出入口, 不允许修改
 
 ## setup 语法糖
@@ -85,12 +84,7 @@ function nodeClick2 (e: __VkNode.ClickEvent) {
 ```
 
 ```ts
-/*
-  types.ts 文件
-  组件入口 components/node/index.ts 会使用
-  export * as __VkNode from './src/types'
-  导出类型
-*/
+// types.ts
 export interface ClickEvent {
   node: Node
   graph: Graph
@@ -98,6 +92,11 @@ export interface ClickEvent {
 }
 export type OnClick = (event: ClickEvent) => ReturnVoid
 ```
+
+:::tip
+以 VkNode 为例，`src/types.ts` 组件会在入口 `components/node/index.ts` 使用`export * as __VkNode from './src/types'`
+导出类型, 所以 `types.ts` 中不需要导出命名空间。
+:::
 
 ## 暴露实例
 
