--- a/todo/port/2.connecting.md
+++ b/todo/port/2.connecting.md
@@ -4,14 +4,27 @@
 
 For Cline:  Plan 和 Act 请使用中文
 
+## 参考
+
+[交互指南](https://x6.antv.antgroup.com/tutorial/basic/interacting)
+
 ## Path
 
 用例: `docs\examples\port\connecting.vue`
 
 ## TODO
 
-+ [ ] 只能使用 Port 连接
++ [ ] 只能使用 Port 连接，和接收连接
 + [ ] 开始节点只能输出
-+ [ ] 结束节点只能输入
-+ [ ] 不能连接自己
++ [x] 结束节点只能输入
++ [x] 不能连接自己
 + [ ] Port 触发区域放大
++ [x] 禁止空连
+
+## BUG
+
+### 开始节点只能输出, 逻辑无效
+
+如果有必要，你可以将这个逻辑，直接写入 register-start-node 中
+
++ 组件文件夹路径: `packages\components\register-start-node\src**`
