--- a/todo/编码约定.md
+++ b/todo/编码约定.md
@@ -1,6 +1,10 @@
 # 编码约定
 
-## index.t
+## 预设
+
+For Cline:  Plan 和 Act 请使用中文
+
+## index.ts
 `packages\components\**\index.ts` 是组件的导出入口, 不允许修改
 
 ## setup 语法糖
