feat: drawer 实现改为使用 `VkNodeDrawer` 组件

--- a/todo/node-drawer/1.init.md
+++ b/todo/node-drawer/1.init.md
@@ -8,4 +8,5 @@ VkNodeDrawer 组件路径: 'packages\components\node-drawer\src\'
 
 ## TODO
 
-- [ ] 将 `drawer 实现` 优化为独立组件 `VkNodeDrawer`
+- [x] 将 `drawer 实现` 优化为独立组件 `VkNodeDrawer`
+- [x] drawer 实现改为使用 `VkNodeDrawer` 组件
