--- a/todo/编码约定.md
+++ b/todo/编码约定.md
@@ -1,10 +1,11 @@
 # 编码约定
 
-## 预设
+## vue style
 
-For Cline:  Plan 和 Act 请使用中文
+`packages\components\**\**.vue` 中不使用 `unocss`, 使用 `bem` 命名规范
 
 ## index.ts
+
 `packages\components\**\index.ts` 是组件的导出入口, 不允许修改
 
 ## setup 语法糖
