feat: drawer header

--- a/todo/node-drawer/2.header.md
+++ b/todo/node-drawer/2.header.md
@@ -14,6 +14,6 @@ VkNodeDrawer 组件路径: 'packages\components\node-drawer\src\'
 
 ## TODO
 
-- [ ] 在关闭按钮右侧添加其他按钮的插槽
-- [ ] 标题下面添加描述的插槽
-- [ ] 添加用例
+- [x] 在关闭按钮右侧添加其他按钮的插槽
+- [x] 标题下面添加描述的插槽
+- [x] 添加用例
