--- a/todo/port/2.connecting.md
+++ b/todo/port/2.connecting.md
@@ -14,17 +14,9 @@ For Cline:  Plan 和 Act 请使用中文
 
 ## TODO
 
-+ [ ] 只能使用 Port 连接，和接收连接
-+ [ ] 开始节点只能输出
++ [x] 只能使用 Port 连接，和接收连接
++ [x] 开始节点只能输出
 + [x] 结束节点只能输入
 + [x] 不能连接自己
 + [ ] Port 触发区域放大
 + [x] 禁止空连
-
-## BUG
-
-### 开始节点只能输出, 逻辑无效
-
-如果有必要，你可以将这个逻辑，直接写入 register-start-node 中
-
-+ 组件文件夹路径: `packages\components\register-start-node\src**`
