--- a/todo/register-llm-node/1.init.md
+++ b/todo/register-llm-node/1.init.md
@@ -28,13 +28,8 @@ interface Field {
   description?: string
 }
 
-interface ValueRef {
-  id: string
-  name: string
-}
-
 interface InputField extends Field {
   // 值引用
-  valueRef: ValueRef
+  valueRef: string[]
 }
 ```
