--- a/todo/dnd/1.init.md
+++ b/todo/dnd/1.init.md
@@ -2,11 +2,15 @@
 
 [官网描述](https://x6.antv.antgroup.com/tutorial/plugins/dnd)
 
+[x6官网](https://x6.antv.antgroup.com/tutorial/about)
+
 ## Path
 
-组件文件路径: `packages\components\dnd\src\index.vue`
+DND 组件文件路径: `packages\components\dnd\src\index.vue`
 
-register-llm-node 组件文件路径: `packages\components\register-llm-node\src\index.vue`
+相关组件源码路径: `packages\components\**\src\index.vue`
+
+用例地址: `docs\examples\dnd\basic.vue`
 
 ## 动机
 
@@ -14,11 +18,8 @@ register-llm-node 组件文件路径: `packages\components\register-llm-node\src
 
 ## 预期
 
-dnd 是一个 popover-button，用户 hover 在这个按钮上，会弹出一个面板，面板中有大模型组件，用户可以拖拽这个组件到画布中
+dnd 是一个面板，面板中有大模型节点，用户可以拖拽这个组件到画布(graph)中
 
 ## TODO
 
-- [ ] 实现 popover-button 按钮
-- [ ] 实现面板
-- [ ] 实现拖拽功能
-- [ ] 实现拖拽到画布中的功能
+- [ ] 实现dnd面板
