pref: cline add FireCrawl MCP

--- a/.cline-preset.md
+++ b/.cline-preset.md
@@ -1,3 +1,24 @@
-
 ## Add File
+
 + [编码约定](/todo/编码约定.md) @/.cline-preset.md 
+
+
+## MCP
+
+### FireCrawl MCP
+
+FireCrawl MCP服务器已成功安装和配置：
+服务器名称: github.com/mendableai/firecrawl-mcp-server
+安装位置: C:/Users/97900/Documents/Cline/MCP/firecrawl-server
+配置文件已更新，包含正确的命令和API密钥设置
+
+服务器提供了多个有用的工具，包括：
+
+firecrawl_scrape: 网页内容抓取
+firecrawl_search: 网络搜索
+firecrawl_crawl: 网站爬取
+firecrawl_extract: 结构化信息提取
+firecrawl_batch_scrape: 批量内容抓取
+
+您现在可以使用这些工具来执行各种网络数据采集和处理任务。
+
